--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,16 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Project requirements I think I met to some degree:
 
-Things you may want to cover:
+1. (30)Demonstrate best-practice use of Rails MVC architecture
+2. (20)Have one many to many association (relationship is in the app/model but didn't have to use the association)
+2. (10)Contain at least three models (though didn't have time to use all of them, model and seed exist for all 3)
+3. (10)Populate the database via seed data
+4. (10)Proper use of a CSS framework like Bootstrap or Foundation (grid usage, form elements, or other components)
+5. (10) Use at least three validation rules
 
-* Ruby version
+This app also uses a gemfile called "Chartkick" which helps create the charts I have in the analysis view.
 
-* System dependencies
+Sign-in, sign-up is currently inactive - a user model and seed data exists but thats it
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
